--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,24 +13,27 @@ approx = "0.4"
 serde = "1.0"
 
 [dependencies.bevy]
-version = "0.7"
-# git = "https://github.com/bevyengine/bevy"
+version = "0.8.0-dev"
+# path = "../bevy"
+git = "https://github.com/bevyengine/bevy"
 # rev = "f3de12bc"
-# branch = "main"
+branch = "main"
 default-features = false
 
 [dev-dependencies.bevy]
-version = "0.7"
-# git = "https://github.com/bevyengine/bevy"
+version = "0.8.0-dev"
+# path = "../bevy"
+git = "https://github.com/bevyengine/bevy"
 # rev = "f3de12bc"
-# branch = "main"
+branch = "main"
 features = ["bevy_core_pipeline", "bevy_pbr", "bevy_winit", "bevy_gltf", "bevy_render"]
 default-features = false
 
 [target.'cfg(target_os = "linux")'.dev-dependencies.bevy]
-version = "0.7"
-# git = "https://github.com/bevyengine/bevy"
+version = "0.8.0-dev"
+# path = "../bevy"
+git = "https://github.com/bevyengine/bevy"
 # rev = "f3de12bc"
-# branch = "main"
+branch = "main"
 features = ["x11", "wayland"]
 default-features = false
